2001-09-16  Dancer Vesperman  <dancer@users.sourceforge.net>

	* Actorio.cc: Use C++ style casts.
	* mouse.h: Use C++ style casts.

2001-09-15  Jeff Freedman  <jeff@amy.nerble.net>

	* Many:  Fixed a bunch of bugs involving fighting on List Field.

	* objs/egg.cc (Egg_object): Fixed eggs once again.
	* combat.cc: Don't set duelists into combat mode when struck.
	* intrinsics.cc: Separated out 'create_new_object2()'.

2001-09-15  Dancer Vesperman  <dancer@users.sourceforge.net>

	* acconfig.h, configure.in: Check for gtk support seperately to exult studio.

2001-09-14  Jeff Freedman  <jeff@amy.nerble.net>

	* intrinsics.cc:  Treat 'last_created' as a 1-element stack.
	* mouse.cc (Mouse): Avatar's speed depends on gwin->std_delay.
	* objs.cc:  Check_mask() rewritten.
	* ucinternal.cc:  Sort list returned by find_nearby().

2001-09-13  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.h,etc: Added get_std_delay() for standard frame delay.
	FPS is read from config file ("config/video/fps").

2001-09-14  Dancer Vesperman  <dancer@users.sourceforge.net>

	* gamewin.cc: Fixed spelling error in output text.

2001-09-13  Tristan Tarrant <nadir@users.sourceforge.net>
	* game.cc: make menu more compact when entries are missing
	* data/quotes.txt: added a quote by Max

2001-09-12  Jeff Freedman  <jeff@amy.nerble.net>

	* siintrinsics.h,intrinsics.cc:  Added (a guess) init_conversation().

	* actors.cc,monstinf.h:  Don't create body if 'has_no_body()'.

2001-09-10  Jeff Freedman  <jeff@amy.nerble.net>

	* combat.cc: If can't walk to target, wander a bit.
	* actors.cc:  Only call 'equipped' usecode for a few items in
	Black Gate.
	* egg.cc:  Teleport eggs are flagged as 'solid', and you now have
	to be at the exact lift to trigger one.

2001-09-11  Dancer Vesperman  <dancer@users.sourceforge.net>

	* mapedit/studio.cc: More reliable getcwd. Prevent crashes if cancelling 'open static'

2001-09-11  Dancer Vesperman  <dancer@users.sourceforge.net>
